<resources>
    <string name="app_name">FieldApprover</string>

    <!-- Strings related to login -->
    <string name="prompt_login">Login</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="Settings">Settings</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_details">DetailsActivity</string>
    <string name="Internet_is_not_available">Internet is not available</string>
    <string name="Connection_is_switched_off">Connection is switched off. Pls. switch on the connection</string>
    <string name="LoggingIn">Logging in...</string>
    <string name="Updating">Updating...</string>
    <string name="ServerIsNotResponding">Server didn\'t send a respond. Try ones again.</string>
    <string name="UserNotFind">Such user\'s name is not find.</string>

    <string name="dialog_text">Are you about to exit the app?</string>
    <string name="dialog_title">Exit app.</string>

    <string name="Cancel">Cancel</string>
    <string name="ok">Ok</string>

    <string name="asc">Asc</string>
    <string name="desc">Desc</string>
    <string name="sort">Asc date</string>
    <string name="sort1">Desc date</string>
    <string name="sort0">Asc final date</string>
    <string name="sort01">Desc final date</string>

    <string name="approve">Approve</string>
    <string name="decline">Decline</string>
    <string name="improve">Improve</string>

    <string name="addcomment">Add comment</string>

    <string name="TitleColumn1">Name</string>
    <string name="TitleColumn2">Value</string>
    <string name="Done">Done</string>
    <string name="Go">Go</string>

    <string name="login">Login is not valid</string>
    <string name="password">Password is not valid</string>

    <string name="search">Search</string>
    <string name="timeout">Response timeout is over</string>

    <string name="SaveLogin">Save login and password</string>

    <string name="dateFrom">Date from</string>
    <string name="dateTo">Date to</string>
    <string name="URL">Server path</string>

    <string name="WrongDate">Date is not valid.  Date format is dd.MM.yyyy</string>

</resources>
